# hbot-remote-client-py

./: .gitignore  Makefile  README.md  pyproject.toml  set_version.sh  setup.cfg  setup.py
examples/: commands_example.py  external_events.py  listener_example.py  simple_cmd_cli.py
hbotrc/: __init__.py  commands.py  external_events.py  listener.py  msgs.py  spec.py
tests/: __init__.py
