[metadata]
name = hbotrc
author = Konstantinos Panayiotou
author_email = klpanagi@gmail.com
license = MIT
description = Description of hbotrc
url = https://github.com/robotics-4-all/hbotrc
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bumpversion]
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:hbotrc/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[options]
packages = find:
zip_safe = False
install_requires =
    pydantic

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here

[mypy]
ignore_missing_imports=false

[tool:pytest]
addopts = --mypy
